--- a/src/components/hero/contact.css
+++ b/src/components/hero/contact.css
@@ -1,23 +1,29 @@
 .team-container {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   flex-direction: row;
-  gap: 25px;
+  gap: 30px;
   flex-wrap: wrap;
 }
 
 .photo-container {
-  width: 25vw; /* Set the desired width */
-  height: 35vh; /* Set the desired height */
-  overflow: hidden; /* Hide any part of the photo that goes outside the container */
+  width: 20vw; /* Set the desired width */
+  height: 30vh; /* Set the desired height */
   display: flex;
-  border-radius: 0px 20% 0px 0px;
   align-items: center;
   justify-content: center;
   position: relative; /* Necessary for the drop shadow on the container */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.571); /* Drop shadow effect */
 }
+
+.photo-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image covers the div */
+  object-position: center; /* Center the image */
+}
+
 
 .member-container h3 {
   font-size: 1.4rem;
