--- a/src/components/hero/sponsors.css
+++ b/src/components/hero/sponsors.css
@@ -46,14 +46,14 @@
 
 .sponsors-title {
   position: relative;
-  font-size: 45px;
-  font-family: poppins;
+  font-size: 47px;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 900;
   display: flex;
   align-items: center;
   gap: 2vw;
+  margin-bottom: 30px;
   padding-left: 6vw;
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     font-size: 40px;
@@ -95,7 +95,9 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     margin-top: 0px;
   }
@@ -139,11 +141,7 @@
     width: 25vw;
   }
 }
-.sponsors-container-sub {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
+
 .sponsor-title a {
   letter-spacing: 2px;
   font-family: Heavitas;
@@ -159,21 +157,13 @@
   max-width: 40vw;
 }
 
-.sponsors-container-sub h2 {
-  text-transform: uppercase;
-  font-size: 3vw;
+.sponsors-container h2 {
+  font-size: 1.7vw;
+  font-weight: normal;
+  font-family: poppins;
   font-weight: bold;
-}
-
-.silver-container h2 {
-  text-transform: uppercase;
-  font-size: 3vw;
-  font-weight: bold;
-  color: rgb(140, 138, 138);
-}
-
-.bronze-container h2 {
-  color: bronze;
+  color: rgb(59, 54, 54);
+  margin-left: 45px;
 }
 
 .link-launch-icon {
@@ -182,4 +172,31 @@
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     width: 25px;
   }
+}
+
+.silver img {
+  border: rgb(159, 157, 157) 3px solid;
+}
+
+.bronze img {
+  border: rgb(179, 127, 81) 3px solid;
+}
+
+.sponsors-name img {
+  width: 330px;
+  border-radius: 10px;
+  background: white;
+  filter: drop-shadow(0 0 0.25rem rgba(2, 36, 51, 0.207));
+  margin-right: 30px;
+}
+
+.sponsors-container-sub {
+  display: flex;
+  align-items: center;
+  margin: 35px;
+}
+
+.sponsors-name :hover {
+  cursor: pointer;
+   filter: drop-shadow(0 0 0.25rem rgba(119, 119, 119, 0.271));
 }
