--- a/src/components/hero/schedule.css
+++ b/src/components/hero/schedule.css
@@ -1,3 +1,7 @@
+.mainSchedule {
+  margin-top: 0px;
+}
+
 .parent-schedule {
   padding: 10vh 3vw;
   position: relative;
@@ -16,7 +20,7 @@
   inset: 0;
   z-index: -97;
   background-size: contain;
-  background-color: rgba(248, 248, 248, 0.988);
+  background-color: #f4f4f3;
   background-image:
       radial-gradient(circle, rgba(123, 106, 98, 0.266) 1px, transparent 1px),
       radial-gradient(circle, rgba(123, 106, 98, 0.266) 1px, transparent 1px),
@@ -43,7 +47,7 @@
   position: absolute;
   inset: 0;
   z-index: -99;
-  opacity: 0.1;
+  /* opacity: 0.1; */
 }
 .schedule-title {
   font-size: 55px;
