--- a/src/components/hero/sponsors.css
+++ b/src/components/hero/sponsors.css
@@ -159,8 +159,8 @@
 
 .sponsors-container h2 {
   font-size: 1.7vw;
-  font-weight: normal;
-  font-family: poppins;
+  font-weight: 300;
+  font-family: Arial;
   font-weight: bold;
   color: rgb(59, 54, 54);
   margin-left: 45px;
@@ -183,10 +183,10 @@
 }
 
 .sponsors-name img {
-  width: 330px;
+  width: 380px;
   border-radius: 10px;
   background: white;
-  filter: drop-shadow(0 0 0.25rem rgba(2, 36, 51, 0.207));
+  filter: drop-shadow(0 0 0.13rem rgba(2, 36, 51, 0.207));
   margin-right: 30px;
 }
 
