--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -49,7 +49,7 @@
   border-left: 4px solid rgb(65, 36, 23);
   height: 0vh;
   top: 6vh;
-  left: 2.7vw;
+  left: 1.7vw;
 }
 @keyframes socialsAnim {
   0% {
@@ -59,6 +59,7 @@
     height: 6.5vh;
   }
 }
+
 .parent .title::after {
   animation: socialsAnim 0.3s linear forwards;
 }
@@ -67,7 +68,7 @@
   z-index: 99;
   color: black;
   top: 2vh;
-  left: 1.2vw;
+  left: .3vw;
   opacity: 0;
   animation: instagram 0.5s 0.3s linear forwards;
 }
@@ -86,7 +87,6 @@
   color: black;
   z-index: 99;
   top: -3vh;
-  left: 0.8vw;
   transform: translateY(15.5vh);
   opacity: 0;
   animation: youtube 0.3s 1.3s linear forwards;
@@ -95,7 +95,7 @@
   position: absolute;
   color: black;
   z-index: 99;
-  left: 1.2vw;
+  left: .3vw;
   opacity: 0;
   transform: translateY(15.5vh);
   animation: youtube 0.3s 1.8s linear forwards;
