--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -18,8 +18,9 @@
 .parent_hero {
   padding-right: 1vw;
   padding-left: 6vw;
+  border-left: 0%;
+  width: 100%;
   padding-top: 3vh;
-  margin-left: 10px;
   position: relative;
   isolation: isolate;
   background-color: rgba(248, 248, 248, 0.988);
@@ -45,6 +46,17 @@
     padding: 0 2vw;
   }
 }
+
+.gladiator-bear {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 20px 10px;
+  width: 100px;
+  @media all and (max-width: 1240px) and (max-height: 1024px) {
+      width: 70px;
+  }
+}
+
 .parent_hero::after {
   content: "";
   position: absolute;
@@ -54,6 +66,7 @@
   /* background-image: url("/images/topography.svg"); */
   background-color: rgb(216, 206, 198);
 }
+
 @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .parent_hero::after {
     content: "";
@@ -96,6 +109,7 @@
   position: relative;
   font-family: poppins;
   font-weight: 500;
+  bottom: -8px;
   color: black;
   border: 2px solid grey;
   font-size: 1.4vw;
@@ -140,7 +154,7 @@
 }
 
 .parent_hero .column .left_side {
-  padding-top: 2vh;
+  /* padding-top: 2vh; */
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     padding: 0;
   }
@@ -153,7 +167,10 @@
   font-weight: 600;
   line-height: 110%;
   font-family: liger;
-  margin-top: 3vh;
+  margin-top: 2vh;
+  @media all and (max-width: 1240px) and (max-height: 1024px) {
+      font-size: 4.4vw;
+  }
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     font-size: 9vw;
   }
@@ -208,36 +225,31 @@
   color: #f04646;
   text-shadow: 2px 0px 0px #bc2f2f;
   margin-bottom: 0px;
-}
-/* 
-.parent_hero .title1 .hackathon{
-
-} */
-
-.title1 #gladiator-bear {
-  position: relative;
-  left: 510px;
-  margin-bottom: 0px;
-  bottom: 200px;
+  margin-top: 0px;
 }
 
 .parent_hero .title1 .hackathon::after {
   content: "";
   margin-bottom: 0px;
   position: absolute;
-  height: 10px;
-  width: 0;
+  height: 7px;
+  width: 38vw;
   left: 0;
   bottom: -1.5vh;
   background: rgba(85, 44, 16, 0.884);
-  animation: line 1s ease-in-out forwards;
+  /* animation: line 1s ease-in-out forwards; */
+  @media all and (max-width: 1240px) {
+    width: 20vw;
+  } 
 }
 
-@media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
+
+
+/* @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
   .parent_hero .title1 .hackathon::after {
     height: 2vh;
   }
-}
+} */
 @keyframes line {
   100% {
     width: 100%;
@@ -245,7 +257,10 @@
 }
 
 .parent_hero .description {
-  margin-top: 0vh;
+  margin-top: 6vh;
+  @media all and (max-width: 1240px) {
+    margin-top: 0vh;
+  } 
 }
 
 .parent_hero .description {
@@ -276,7 +291,7 @@
 }
 
 .register_now {
-  margin-top: 6vh;
+  margin-top: 5vh;
   position: relative;
   padding: 0.5vh 0.5vw;
   background-color: #180D02;
@@ -789,7 +804,7 @@
 .right_side .col4 {
   margin-top: -100px;
   position: relative;
-  height: 100px;
+  height: 110px;
   width: 100%;
   padding: 1vw;
   background-repeat: no-repeat;
@@ -858,6 +873,13 @@
     font-size: 3.5vw;
   }
 }
+
+.location {
+  margin-top: 10px;
+  color: white;
+  font-weight: 400px;
+}
+
 .venue-text-mobile {
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     font-size: 4vw;
@@ -878,9 +900,14 @@
   background-image: linear-gradient(147deg, #4d4855 0%, #000000 74%);
   isolation: isolate;
   transition: all 0.1s linear;
-  @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-    margin-top: 0.5vh;
-    border-radius: 2vw;
-    padding: 1vh 3vw;
+
+  @media all and (max-width: 1700px) and (max-height: 1024px) {
+    border-radius: 1vw;
+    margin-top: -130px;
+  }
+
+  @media all and (max-width: 1450px) and (max-height: 1024px) {
+    border-radius: 1vw;
+    margin-top: -115px;
   }
 }
