--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -44,6 +44,7 @@
       70px 50px;
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     padding: 0 2vw;
+    background-color: #f4f4f3;
   }
 }
 
@@ -54,6 +55,10 @@
   width: 100px;
   @media all and (max-width: 1240px) and (max-height: 1024px) {
       width: 70px;
+  }
+
+  @media all and (max-width: 600px) and (max-height: 1024px) {
+    width: 40px;
   }
 }
 
@@ -73,15 +78,33 @@
     position: absolute;
     z-index: -2;
     inset: 0;
-    opacity: 0.1;
-    background-image: url("/images/topography.svg");
+    opacity: 1;
+    background-color: #f4f4f3;
+    background-image:
+        radial-gradient(circle, rgba(123, 106, 98, 0.266) 1px, transparent 1px),
+        radial-gradient(circle, rgba(123, 106, 98, 0.266) 1px, transparent 1px),
+        radial-gradient(circle, rgba(123, 106, 98, 0.266) 1px, transparent 1px),
+        radial-gradient(circle, rgba(123, 106, 98, 0.266) 1px, transparent 1px),
+        radial-gradient(circle, rgba(123, 106, 98, 0.266) 1px, transparent 1px);
+    background-size:
+        20px 20px,
+        35px 35px,
+        50px 50px,
+        65px 65px,
+        80px 80px;
+    background-position:
+        0px 0px,
+        10px 20px,
+        30px 10px,
+        50px 30px,
+        70px 50px;
   }
 }
 
 .tag-hero-mobile {
   display: flex;
   align-items: flex-end;
-  gap: 1vw;
+  gap: 0vw;
   position: relative;
   z-index: -1;
   padding: 0;
@@ -92,6 +115,8 @@
     gap: 2vw;
   }
 }
+
+
 
 .hero-srm-logo {
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
@@ -124,6 +149,7 @@
     font-size: 3.5vw;
     padding: 0.2vh 1vw;
     margin-top: 3vh;
+    margin-left: 10px;
     text-align: center;
     font-weight: 600;
     gap: 1vw;
@@ -226,6 +252,14 @@
   text-shadow: 2px 0px 0px #bc2f2f;
   margin-bottom: 0px;
   margin-top: 0px;
+
+  @media all and (max-width: 1240px) {
+    margin-left: 10px;
+  }
+
+  @media all and (max-width: 600px) {
+    height: 19vh;
+  } 
 }
 
 .parent_hero .title1 .hackathon::after {
@@ -238,11 +272,20 @@
   bottom: -1.5vh;
   background: rgba(85, 44, 16, 0.884);
   /* animation: line 1s ease-in-out forwards; */
-  @media all and (max-width: 1240px) {
-    width: 20vw;
-  } 
 }
 
+@media all and (max-width: 1240px) {
+  .parent_hero .title1 .hackathon::after { 
+    width: 20vw;
+  }
+} 
+@media all and (max-width: 600px) and (max-height: 1024px) {
+  .parent_hero .title1 .hackathon::after {
+    width: 0vw;
+    height: 0vw;
+    bottom: 15px;
+  }
+}
 
 
 /* @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
@@ -258,13 +301,14 @@
 
 .parent_hero .description {
   margin-top: 6vh;
-  @media all and (max-width: 1240px) {
-    margin-top: 0vh;
-  } 
-}
-
-.parent_hero .description {
   width: 38vw;
+  @media all and (max-width: 600px) {
+    margin-left: 10px;
+    margin-top: 0px;
+    width: 90%;
+    position: relative;
+    bottom: 85px;
+  } 
 }
 
 .parent_hero .description p {
@@ -309,6 +353,12 @@
     padding: 0 1vw;
     width: 60vw;
   }
+
+  @media all and (max-width: 600px) {
+    position: relative;
+    bottom: 55px;
+    margin-left: 10px;
+  } 
 }
 .register_now:hover {
   width: 21vw;
@@ -331,6 +381,12 @@
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     margin-top: 2vh;
   }
+
+  @media all and (max-width: 600px) {
+    margin-left: 10px;
+    position: relative;
+    bottom: 35px;
+  } 
 }
 
 .countdown-text {
@@ -492,21 +548,26 @@
   margin-top: 15vh;
   bottom: 80px;
   padding: 1vw;
-  width: 400px;
+  width: 450px;
   height: fit-content;
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 1vw;
   background-image: linear-gradient(147deg, #302e2b 0%, #180D02 74%);
-  /* background-image: url("/images/planet2.webp"); */
   isolation: isolate;
   transition: all 0.1s linear;
+  
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     margin: 0;
     padding: 2vh 5vw;
     border-radius: 3vw;
-    width: 9fvw;
   }
+
+  @media all and (max-width: 600px) {
+    position: relative;
+    bottom: 35px;
+    width: 100vw;
+  } 
 }
 
 .col1 text {
@@ -515,7 +576,23 @@
 
 #diff-col1 
 {
-  width: fit-content;
+  width: 350px;
+
+}
+
+@media all and (max-width: 600px) {
+  #diff-col1 {
+    width: 100%;
+    border-radius: 7px;
+    margin-bottom: 10px;
+  }
+}
+
+@media all and (max-width: 600px) {
+  #diff-col2 {
+    width: 100%;
+    border-radius: 7px;
+  }
 }
 
 .col1:hover {
@@ -574,6 +651,10 @@
   gap: 5vw;
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     font-size: 8vw;
+  }
+
+  @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
+    font-size: 6vw;
   }
 }
 .right_side .col1 .text > div {
@@ -714,8 +795,6 @@
   padding: 1vw;
   background-repeat: no-repeat;
   border-radius: 1vw;
-  background-color: #4d4855;
-  background-image: url("/images/motherboard.webp");
   isolation: isolate;
   overflow: hidden;
   border: 0.2vw solid black;
