--- a/src/components/hero/sponsors.css
+++ b/src/components/hero/sponsors.css
@@ -158,12 +158,15 @@
 }
 
 .sponsors-container h2 {
-  font-size: 1.7vw;
+  font-size: 35px;
   font-weight: 300;
   font-family: Arial;
   font-weight: bold;
   color: rgb(59, 54, 54);
-  margin-left: 45px;
+  margin-left: 20px;
+  @media all and (max-width: 500px) and (max-height: 1024px) {
+    font-size: 25px;
+  }
 }
 
 .link-launch-icon {
@@ -192,9 +195,16 @@
 
 .sponsors-container-sub {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   margin: 35px;
+  gap: 10px;
 }
+
+  @media all and (max-width: 750px) and (max-height: 1024px) {
+    .sponsors-container-sub {
+      flex-direction: column;
+    }
+  }
 
 .sponsors-name :hover {
   cursor: pointer;
