Updated sponsors  + links
Updated sponsors  + links

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -553,7 +553,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 1vw;
-  background-image: linear-gradient(147deg, #302e2b 0%, #180D02 74%);
+  background-image: linear-gradient(147deg, #1f1e1d 0%, #100800 74%);
   isolation: isolate;
   transition: all 0.1s linear;
   
