--- a/src/components/hero/faqs.css
+++ b/src/components/hero/faqs.css
@@ -59,8 +59,8 @@
 .faqs-section {
   display: flex;
   flex-direction: column;
-  margin-left: 10vw;
-  gap: 5vh;
+  margin-left: 7.5vw;
+  gap: 4vh;
   width: 80%;
   height: 100%;
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
@@ -71,13 +71,15 @@
 }
 
 .faqs-content {
-  border: 2px dotted black;
-  padding: 0.5vh 1vw;
+  border: 2px solid #844b1c;
+  padding: 2vh 1vw;
+  background: linear-gradient(135deg, #ca854d, #b9743c);
   border-radius: 0.5vw;
+  color: rgb(42, 24, 15);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 2vh;
+  gap: 0vh;
   overflow-y: hidden;
   position: relative;
   cursor: pointer;
@@ -85,9 +87,11 @@
     border-radius: 1vw;
   }
 }
+
 .faqs-view {
   display: block;
 }
+
 .faqs-content-title {
   font-size: 1.6vw;
   font-weight: 800;
