--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -53,6 +53,11 @@
   vertical-align: middle;
   margin: 20px 10px;
   width: 100px;
+
+  @media all and (max-width: 1510px) {
+    width: 85px;
+  }
+
   @media all and (max-width: 1240px) and (max-height: 1024px) {
       width: 70px;
   }
@@ -60,7 +65,10 @@
   @media all and (max-width: 600px) and (max-height: 1024px) {
     width: 40px;
   }
+  
 }
+
+
 
 .parent_hero::after {
   content: "";
@@ -194,12 +202,16 @@
   line-height: 110%;
   font-family: liger;
   margin-top: 2vh;
-  @media all and (max-width: 1240px) and (max-height: 1024px) {
+  @media all and (max-width: 1240px) {
       font-size: 4.4vw;
   }
-  @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
-    font-size: 9vw;
+  @media all and (max-width: 1510px) {
+    font-size: 4.2vw;
   }
+
+  /* @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
+    font-size: 9vw;
+  } */
 }
 
 /* .title1::after {
@@ -274,11 +286,12 @@
   /* animation: line 1s ease-in-out forwards; */
 }
 
-@media all and (max-width: 1240px) {
-  .parent_hero .title1 .hackathon::after { 
-    width: 20vw;
+@media all and (max-width: 1510px) {
+  .parent_hero .title1 .hackathon::after {
+    width: 35vw;
   }
-} 
+}
+
 @media all and (max-width: 600px) and (max-height: 1024px) {
   .parent_hero .title1 .hackathon::after {
     width: 0vw;
@@ -311,11 +324,17 @@
   } 
 }
 
+@media all and (max-width: 1510px) {
+  .parent_hero .description {
+    width: 35vw;
+  }
+}
+
 .parent_hero .description p {
   font-size: 1.3vw;
   font-weight: 399;
   font-family: roboto;
-  line-height: normal;
+  line-height: 31px;
   text-transform: none;
   letter-spacing: 0px;
   margin-top: 0;
@@ -539,16 +558,70 @@
 }
 
 .right_side {
-  margin-right: .3vw;
+  margin-right: .1vw;
+  margin-left: 5vw;
+}
+
+.right_side .col9 {
+  position: relative;
+  margin-top: 0vh;
+  height: fit-content;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 1vw;
+  background-image: linear-gradient(147deg, #1f1e1d 0%, #100800 74%);
+  isolation: isolate;
+  transition: all 0.1s linear;
+  width: fit-content;
+}
+
+ol {
+  list-style-type: decimal; /* Ensures numbers are shown */
+  margin: 10px;
+  margin-left: 30px;
+}
+
+.intro-boxes {
+  display: flex;
+  position: relative;
+  top: 85px;
+  flex-direction: row;
+  padding: 0px;
+  margin: 0px;
+  height: 380px;
+}
+
+.blank-holder {
+  height: 0px;
+  width: 0px;
+  margin: 0px;
+}
+
+.right_side .col9 {
+  width: 86vh;
+  margin-top: 0px;
+  padding: 1vw;
+  color: white;
+  font-size: 18px;
+}
+
+.prize-title {
+  text-decoration: underline;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.prize-container {
+  margin-top: 15px;
+  margin-left: 15px;
 }
 
 .right_side .col1 {
   position: relative;
   margin-bottom: 0;
-  margin-top: 15vh;
-  bottom: 80px;
   padding: 1vw;
   width: 450px;
+  margin-right: 30px;
   height: fit-content;
   background-repeat: no-repeat;
   background-size: cover;
@@ -563,11 +636,11 @@
     border-radius: 3vw;
   }
 
-  @media all and (max-width: 600px) {
+  /* @media all and (max-width: 600px) {
     position: relative;
     bottom: 35px;
     width: 100vw;
-  } 
+  }  */
 }
 
 .col1 text {
@@ -635,7 +708,7 @@
     box-shadow: 0vw 0vh 0vw 0vw black;
   }
 }
-.right_side .col1 .text {
+.right_side .text {
   background-image: linear-gradient(315deg, #e9e9e9 0%, #ffffff 74%);
   background-clip: text;
   font-family: poppins;
