--- a/src/components/hero/sponsors.css
+++ b/src/components/hero/sponsors.css
@@ -97,6 +97,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-left: 15px;
 
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     margin-top: 0px;
@@ -163,7 +164,7 @@
   font-family: Arial;
   font-weight: bold;
   color: rgb(59, 54, 54);
-  margin-left: 20px;
+  margin-left: 20px;;
   @media all and (max-width: 500px) and (max-height: 1024px) {
     font-size: 25px;
   }
@@ -175,6 +176,10 @@
   @media all and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait) {
     width: 25px;
   }
+}
+
+.gold img {
+  border: rgb(238, 192, 62) 3px solid;
 }
 
 .silver img {
@@ -197,6 +202,8 @@
   display: flex;
   flex-direction: row;
   margin: 35px;
+  margin-top: 20px;
+  margin-bottom: 45px;
   gap: 10px;
 }
 
