--- a/src/components/hero/sponsors.css
+++ b/src/components/hero/sponsors.css
@@ -217,3 +217,8 @@
   cursor: pointer;
    filter: drop-shadow(0 0 0.25rem rgba(119, 119, 119, 0.271));
 }
+
+.event-time p {
+  font-family: arial;
+  color: rgb(43, 43, 43);
+}
